--- a/arch/arm64/configs/gemini_defconfig
+++ b/arch/arm64/configs/gemini_defconfig
@@ -1,3 +1,127 @@
+CONFIG_LOCALVERSION="-halium"
+CONFIG_AUTOFS4_FS=y
+CONFIG_CHECKPOINT_RESTORE=y
+CONFIG_NETFILTER_XT_CONNMARK=y
+CONFIG_DEVTMPFS=y
+CONFIG_ISO9660_FS=y
+CONFIG_SUNRPC=y
+CONFIG_NF_NAT_IPV6=y
+CONFIG_SYSFS=y
+CONFIG_NET_NS=y
+CONFIG_DEVTMPFS_MOUNT=y
+CONFIG_CGROUP_MEM_RES_CTLR_SWAP=y
+CONFIG_NFS_USE_KERNEL_DNS=y
+CONFIG_NFS_V3_ACL=y
+CONFIG_NETFILTER_XT_MATCH_NFACCT=y
+CONFIG_NETFILTER_NETLINK_ACCT=y
+CONFIG_LBDAF=y
+CONFIG_NETFILTER_XT_MATCH_RECENT=y
+CONFIG_PROC_FS=y
+CONFIG_IPC_NS=y
+CONFIG_NET_CLS_CGROUP=y
+CONFIG_TIMERFD=y
+CONFIG_SECURITY_SELINUX_BOOTPARAM_VALUE=0
+CONFIG_UTS_NS=y
+CONFIG_NLS_UTF8=y
+CONFIG_SECURITY_YAMA_STACKED=y
+CONFIG_NFS_ACL_SUPPORT=y
+# CONFIG_NETPRIO_CGROUP is not set
+# CONFIG_NET_CLS_CGROUP is not set
+# CONFIG_FW_LOADER_USER_HELPER is not set
+# CONFIG_ANDROID_LOW_MEMORY_KILLER is not set
+# CONFIG_ANDROID_PARANOID_NETWORK is not set
+# CONFIG_DEFAULT_SECURITY_DAC is not set
+# CONFIG_DEFAULT_SECURITY_SELINUX is not set
+# CONFIG_DEFAULT_SECURITY_TOMOYO is not set
+# CONFIG_DEFAULT_SECURITY_YAMA is not set
+# CONFIG_DEFAULT_SECURITY_SMACK is not set
+# CONFIG_SECURITY_APPARMOR_STATS is not set
+# CONFIG_SECURITY_SELINUX_POLICYDB_VERSION_MAX is not set
+# CONFIG_SECURITY_TOMOYO_OMIT_USERSPACE_LOADER is not set
+# CONFIG_BT_HCIBTUSB is not set
+# CONFIG_BT_HCIBTSDIO is not set
+# CONFIG_BT_HCIUART is not set
+# CONFIG_BT_HCIBCM203X is not set
+# CONFIG_BT_HCIBPA10X is not set
+# CONFIG_BT_HCIBFUSB is not set
+# CONFIG_BT_HCIVHCI is not set
+# CONFIG_BT_MRVL is not set
+# CONFIG_AF_RXRPC is not set
+# CONFIG_KEYS_DEBUG_PROC_KEYS is not set
+# CONFIG_XFRM_MIGRATE is not set
+# CONFIG_XFRM_SUB_POLICY is not set
+# CONFIG_COMPAT_BRK is not set
+# CONFIG_NETFILTER_DEBUG is not set
+# CONFIG_IP_SET is not set
+# CONFIG_IP_VS is not set
+# CONFIG_ARM_UNWIND is not set
+# CONFIG_VT_HW_CONSOLE_BINDING is not set
+# CONFIG_FRAMEBUFFER_CONSOLE is not set
+# CONFIG_SPEAKUP is not set
+# CONFIG_CIFS_UPCALL is not set
+# CONFIG_CIFS_DFS_UPCALL is not set
+# CONFIG_KGDB is not set
+CONFIG_BT_HCIUART_H4=y
+CONFIG_F2FS_FS_SECURITY=!
+CONFIG_SYSVIPC=y
+CONFIG_NFS_V4=y
+CONFIG_RTC_DRV_CMOS=y
+CONFIG_ANDROID_LOW_MEMORY_KILLER=y
+CONFIG_RD_GZIP=y
+CONFIG_SCHEDSTATS=y
+CONFIG_NETFILTER_XT_MATCH_SCTP=y
+CONFIG_INOTIFY_USER=y
+CONFIG_UDF_FS=y
+CONFIG_TMPFS_XATTR=y
+CONFIG_IP6_NF_MATCH_AH=y
+CONFIG_SECURITY_YAMA=y
+CONFIG_BLK_DEV_NBD=y
+CONFIG_NETFILTER_XT_MATCH_DCCP=y
+CONFIG_SECURITY_SELINUX_BOOTPARAM=y
+CONFIG_CGROUP_NET_PRIO=y
+CONFIG_IP_NF_MATCH_AH=y
+CONFIG_VT=y
+CONFIG_NFS_FS=y
+CONFIG_NFS_COMMON=y
+CONFIG_IP6_NF_MATCH_FRAG=y
+CONFIG_FHANDLE=y
+CONFIG_CGROUP_MEM_RES_CTLR=y
+CONFIG_QUOTACTL=y
+CONFIG_NFS_V4_1=y
+CONFIG_BT_HCIUART=y
+CONFIG_NETFILTER_XT_MATCH_QTAGUID=y
+CONFIG_SIGNALFD=y
+CONFIG_QUOTA_NETLINK_INTERFACE=y
+CONFIG_CGROUP_PERF=y
+CONFIG_NETWORK_FILESYSTEMS=y
+CONFIG_DUMMY=y
+CONFIG_NETPRIO_CGROUP=y
+CONFIG_CUSE=y
+CONFIG_SCHED_DEBUG=y
+CONFIG_LOCKD=y
+CONFIG_WATCHDOG_NOWAYOUT=y
+CONFIG_BT_RFCOMM=y
+CONFIG_FANOTIFY=y
+CONFIG_UEVENT_HELPER_PATH=""
+CONFIG_SUNRPC_GSS=y
+CONFIG_CGROUP_DEVICE=y
+CONFIG_CIFS=y
+CONFIG_LOCKD_V4=y
+CONFIG_F2FS_FS=!
+CONFIG_CGROUP_MEM_RES_CTLR_KMEM=y
+CONFIG_NETFILTER_XT_MATCH_OWNER=y
+CONFIG_CGROUP_MEM_RES_CTLR_KMEM=y
+CONFIG_MEMCG_KMEM=y
+# CONFIG_F2FS_FS_SECURITY is not set
+CONFIG_IPV6=y
+CONFIG_NETFILTER_XT_MATCH_OWNER=y
+CONFIG_EPOLL=y
+CONFIG_BTRFS_FS=y
+CONFIG_NFS_V3=y
+# CONFIG_F2FS_FS is not set
+CONFIG_HIDRAW=y
+CONFIG_IP6_NF_MATCH_MH=y
+CONFIG_PID_NS=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE=y
 CONFIG_TOUCHSCREEN_ATMEL_MXT=y
 CONFIG_INPUT_FINGERPRINT=y
@@ -304,7 +428,7 @@ CONFIG_DM_VERITY=y
 CONFIG_DM_VERITY_FEC=y
 CONFIG_NETDEVICES=y
 CONFIG_BONDING=y
-CONFIG_DUMMY=y
+CONFIG_DUMMY=n
 CONFIG_TUN=y
 # CONFIG_NET_VENDOR_3COM is not set
 # CONFIG_NET_VENDOR_ADAPTEC is not set
